// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > review > createReviewRole > successful 1`] = `undefined`;

exports[`services > review > createReviewRole > successful 2`] = `undefined`;

exports[`services > review > findReviews > active reviews for a specific model 1`] = `
[
  [
    [
      {
        "$match": {
          "modelId": "modelId",
        },
      },
      {
        "$sort": {
          "createdAt": -1,
        },
      },
      {
        "$lookup": {
          "as": "model",
          "foreignField": "id",
          "from": "v2_models",
          "localField": "modelId",
        },
      },
      {
        "$unwind": {
          "path": "$model",
        },
      },
      {
        "$match": {},
      },
      {
        "$lookup": {
          "as": "responses",
          "foreignField": "parentId",
          "from": "v2_responses",
          "localField": "_id",
        },
      },
      {
        "$addFields": {
          "responseCount": {
            "$size": "$responses",
          },
        },
      },
      {
        "$match": {
          "responseCount": {
            "$gt": 0,
          },
        },
      },
      {
        "$unset": [
          "responses",
          "responseCount",
        ],
      },
    ],
  ],
]
`;

exports[`services > review > findReviews > all open reviews for user 1`] = `
[
  [
    [
      {
        "$match": {},
      },
      {
        "$sort": {
          "createdAt": -1,
        },
      },
      {
        "$lookup": {
          "as": "model",
          "foreignField": "id",
          "from": "v2_models",
          "localField": "modelId",
        },
      },
      {
        "$unwind": {
          "path": "$model",
        },
      },
      {
        "$match": {
          "$expr": {
            "$gt": [
              {
                "$size": {
                  "$filter": {
                    "as": "item",
                    "cond": {
                      "$and": [
                        {
                          "$in": [
                            "$$item.entity",
                            [
                              "user:test",
                            ],
                          ],
                        },
                        {
                          "$in": [
                            "$role",
                            "$$item.roles",
                          ],
                        },
                      ],
                    },
                    "input": "$model.collaborators",
                  },
                },
              },
              0,
            ],
          },
        },
      },
      {
        "$lookup": {
          "as": "responses",
          "foreignField": "parentId",
          "from": "v2_responses",
          "localField": "_id",
        },
      },
      {
        "$addFields": {
          "responseCount": {
            "$size": "$responses",
          },
        },
      },
      {
        "$match": {
          "responseCount": 0,
        },
      },
      {
        "$unset": [
          "responses",
          "responseCount",
        ],
      },
    ],
  ],
]
`;

exports[`services > review > findReviews > all reviews for user 1`] = `
[
  [
    [
      {
        "$match": {},
      },
      {
        "$sort": {
          "createdAt": -1,
        },
      },
      {
        "$lookup": {
          "as": "model",
          "foreignField": "id",
          "from": "v2_models",
          "localField": "modelId",
        },
      },
      {
        "$unwind": {
          "path": "$model",
        },
      },
      {
        "$match": {
          "$expr": {
            "$gt": [
              {
                "$size": {
                  "$filter": {
                    "as": "item",
                    "cond": {
                      "$and": [
                        {
                          "$in": [
                            "$$item.entity",
                            [
                              "user:test",
                            ],
                          ],
                        },
                        {
                          "$in": [
                            "$role",
                            "$$item.roles",
                          ],
                        },
                      ],
                    },
                    "input": "$model.collaborators",
                  },
                },
              },
              0,
            ],
          },
        },
      },
      {
        "$lookup": {
          "as": "responses",
          "foreignField": "parentId",
          "from": "v2_responses",
          "localField": "_id",
        },
      },
      {
        "$addFields": {
          "responseCount": {
            "$size": "$responses",
          },
        },
      },
      {
        "$match": {
          "responseCount": {
            "$gt": 0,
          },
        },
      },
      {
        "$unset": [
          "responses",
          "responseCount",
        ],
      },
    ],
  ],
]
`;

exports[`services > review > findReviewsForAccessRequests > success 1`] = `
[
  {
    "accessRequestId": [
      "Hello",
    ],
  },
]
`;

exports[`services > review > getReviewRoles > returns array of review roles 1`] = `undefined`;

exports[`services > review > getReviewRoles > returns array of review roles 2`] = `undefined`;

exports[`services > review > getReviewRoles > returns array of review roles when given a single schema Id 1`] = `undefined`;

exports[`services > review > getReviewRoles > returns array of review roles when given a single schema Id 2`] = `undefined`;

exports[`services > review > removeAccessRequestReviews > successful 1`] = `
[
  {
    "accessRequestId": [
      "Hello",
    ],
  },
]
`;

exports[`services > review > removeReviewRole > successful 1`] = `undefined`;

exports[`services > review > removeReviewRole > successful 2`] = `undefined`;
